# binary_calculator

./: .gitignore  ARCHITECTURE.md  BASIC_EXAMPLES_COMPLETE.md  BINARY_ALGORITHMS.md  CHANGELOG.md  CLI_IMPLEMENTATION_PROGRESS.md  COMMENT_STATUS.md  COMPLETE_SUMMARY.md  COMPLETE_SYSTEM_v2.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_STATUS.md  EXAMPLES_SETUP.md  FINAL_ARCHITECTURE.md  FINAL_CLEAN_ARCHITECTURE.md  FINAL_STATUS.md  GITHUB_SETUP.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  PURE_BINARY_IMPLEMENTATION.md  README.md  READY_FOR_GITHUB.md  REFACTORING_SUMMARY.md  SUCCESS.md  TEST_COVERAGE.md  demo_complete_system.py  demo_pure_binary.py  example.py  example_comprehensive_demo.py  example_conversions.py  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  test_binary_comparator.py  test_conversions.py  test_instruction_advanced.py  test_instruction_comparison.py  (+2 more)
binary_calculator/: __init__.py
binary_calculator/calculator/: __init__.py  arithmetic_calculator.py
binary_calculator/comparator/: __init__.py  binary_comparator.py
binary_calculator/converter/: __init__.py  binary_converter.py
binary_calculator/executor/: __init__.py  instruction_executor.py
binary_calculator/instruction/: __init__.py  binary_instruction.py  binary_number.py  operation_enum.py
binary_calculator/normalizer/: __init__.py  binary_normalizer.py
docs/: SYSTEM_SUMMARY.txt  index.md
docs/basic/: example_01_binary_number.md  example_02_binary_instruction.md  example_03_arithmetic_calculator.md  example_04_binary_comparator.md  example_05_binary_converter.md  example_06_binary_normalizer.md  example_07_instruction_executor.md  index.md
docs/realistic_scenarios/: index.md  scenario_01_memory_address.md  scenario_02_file_storage.md  scenario_03_network_bandwidth.md
docs/stylesheets/: extra.css
examples/: README.md  __init__.py  example.py
examples/basic/: README.md  __init__.py  example_01_binary_number.py  example_05_binary_converter.py  (+5 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
tests/: test_instruction_executor.py
(+4 files in other folders)
