[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "binary_calculator"
version = "1.0.0"
description = "Pure binary arithmetic operations without decimal conversion"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["binary", "arithmetic", "calculator", "education", "algorithms"]
dependencies = []
requires-python = ">=3.7"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "pymdown-extensions>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/binary_calculator"
Documentation = "https://YOUR_USERNAME.github.io/binary_calculator"
Repository = "https://github.com/YOUR_USERNAME/binary_calculator"
"Bug Tracker" = "https://github.com/YOUR_USERNAME/binary_calculator/issues"

[project.scripts]
binary-calc-examples = "examples.example:main"

[tool.setuptools]
packages = ["binary_calculator", "binary_calculator.calculator", "binary_calculator.comparator", "binary_calculator.converter", "binary_calculator.executor", "binary_calculator.instruction", "binary_calculator.normalizer"]

[tool.setuptools.package-data]
binary_calculator = ["py.typed"]

